--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.33",
     "expo-status-bar": "~2.0.1",
+    "native-base": "^2.15.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-animatable": "^1.4.0",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-drawer-layout": "^4.1.1",
+    "react-native-iap": "^12.16.2",
+    "react-native-progress": "^5.0.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "babel-preset-expo": "^12.0.8",
     "typescript": "^5.3.3"
   },
   "private": true
