--- a/app.json
+++ b/app.json
@@ -29,6 +29,12 @@
         "projectId": "c73f99b6-4336-4323-981c-0e5c5f6ecd20"
       }
     },
-    "owner": "ferrixx"
+    "owner": "ferrixx",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/c73f99b6-4336-4323-981c-0e5c5f6ecd20"
+    }
   }
 }
