--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.33",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "^0.26.18",
     "native-base": "^2.15.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.7",
     "react-native-animatable": "^1.4.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-drawer-layout": "^4.1.1",
