--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.33",
+    "expo-constants": "^17.0.6",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "^0.26.18",
     "native-base": "^2.15.2",
