--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "trinkspiel-app",
-  "version": "0.0.11",
+  "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,12 +18,13 @@
     "native-base": "^2.15.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "^0.76.7",
+    "react-native": "0.76.7",
     "react-native-animatable": "^1.4.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-iap": "^12.16.2",
     "react-native-progress": "^5.0.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "15.8.0"
   },
